fix routes, swagger
